<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- [CHAR LIMIT=30] -->
    <string name="pref_location_key">location</string>
    <!-- [CHAR LIMIT=NONE] -->
    <string name="pref_location_label" translatable="false">Location</string>
    <!-- [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">3687925</string>
    <string name="pref_system_label">System</string>
    <string name="pref_system_type_default">metric</string>
    <string name="action_map">Map Location</string>
    <string name="my_menu_shared_title">Share</string>

</resources>
