<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <ListPreference
        android:key="pref_system"
        android:title="@string/pref_system_label"
        android:dialogTitle="@string/pref_system_label"
        android:entries="@array/pref_system_type_entries"
        android:entryValues="@array/pref_system_type_values"
        android:defaultValue="@string/pref_system_type_default" />

</PreferenceScreen>
